--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,75 @@
 version: "3"
+
+networks:
+  monitor:
+    driver: bridge
+
 services:
-  web:
-    build: .
-    container_name: "looloutclient"
+  lookoutclient:
+    build:
+      context: ./lookoutclient
+      dockerfile: Dockerfile
+    container_name: lookoutclient
+    restart: always
     ports:
       - "9494:9494"
+    networks:
+      - monitor
+
   prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    restart: always
+    volumes:
+      - $PWD/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - $PWD/prometheus/rules.yml:/etc/prometheus/node_down.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - monitor
+
+  # 报警系统
+  alertmanager:
+    image: prom/alertmanager
+    container_name: alertmanager
+    restart: always
+    volumes:
+      - $PWD/prometheus/alertmanager.yml:/etc/alertmanager/alertmanager.yml
+    ports:
+      - "9093:9093"
+    networks:
+      - monitor
+
+  # web可视化数据
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    restart: always
+    ports:
+      - "3000:3000"
+    networks:
+      - monitor
+
+  # 采集主机数据
+  node-exporter:
+    image: quay.io/prometheus/node-exporter
+    container_name: node-exporter
+    restart: always
+    ports:
+      - "9100:9100"
+    networks:
+      - monitor
+  # 容器监控
+  # cadvisor:
+  #   image: google/cadvisor:latest
+  #   container_name: cadvisor
+  #   restart: always
+  #   volumes:
+  #     - /:/rootfs:ro
+  #     - /var/run:/var/run:rw
+  #     - /sys:/sys:ro
+  #     - /var/lib/docker/:/var/lib/docker:ro
+  #   ports:
+  #     - "8080:8080"
+  #   networks:
+  #     - monitor
