--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,23 @@ networks:
     driver: bridge
 
 services:
+  lookoutserver:
+    build:
+      context: ./lookoutserver
+      dockerfile: Dockerfile
+    container_name: lookoutserver
+    restart: always
+    volumes:
+      - $PWD/lookoutserver/foo.properties:/tmp/foo.properties
+    ports:
+      - "9090:9090"
+    links:
+      - elasticsearch
+    networks:
+      - monitor
+    environment:
+      - JAVA_OPTS="-Dlookoutall.config-file=/tmp/foo.properties"
+
   lookoutclient:
     build:
       context: ./lookoutclient
@@ -50,7 +67,7 @@ services:
     networks:
       - monitor
 
-  # 采集主机数据
+  # # 采集主机数据
   node-exporter:
     image: quay.io/prometheus/node-exporter
     container_name: node-exporter
@@ -59,17 +76,28 @@ services:
       - "9100:9100"
     networks:
       - monitor
+
+  # 本地ES服务
+  elasticsearch:
+    image: elasticsearch
+    container_name: elasticsearch
+    restart: always
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      - discovery.type=single-node
   # 容器监控
-  # cadvisor:
-  #   image: google/cadvisor:latest
-  #   container_name: cadvisor
-  #   restart: always
-  #   volumes:
-  #     - /:/rootfs:ro
-  #     - /var/run:/var/run:rw
-  #     - /sys:/sys:ro
-  #     - /var/lib/docker/:/var/lib/docker:ro
-  #   ports:
-  #     - "8080:8080"
-  #   networks:
-  #     - monitor
+  cadvisor:
+    image: google/cadvisor:latest
+    container_name: cadvisor
+    restart: always
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+    ports:
+      - "8080:8080"
+    networks:
+      - monitor
