--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,99 +5,82 @@ networks:
     driver: bridge
 
 services:
-  lookoutserver:
-    build:
-      context: ./lookoutserver
-      dockerfile: Dockerfile
-    container_name: lookoutserver
-    restart: always
-    volumes:
-      - $PWD/lookoutserver/foo.properties:/tmp/foo.properties
-    ports:
-      - "9090:9090"
-    links:
-      - elasticsearch
-    networks:
-      - monitor
-    environment:
-      - JAVA_OPTS="-Dlookoutall.config-file=/tmp/foo.properties"
+  # lookoutclient:
+  #   build:
+  #     context: ./lookoutclient
+  #     dockerfile: Dockerfile
+  #   container_name: lookoutclient
+  #   restart: always
+  #   ports:
+  #     - "9494:9494"
+  #   networks:
+  #     - monitor
 
-  lookoutclient:
-    build:
-      context: ./lookoutclient
-      dockerfile: Dockerfile
-    container_name: lookoutclient
-    restart: always
-    ports:
-      - "9494:9494"
-    networks:
-      - monitor
-
-  prometheus:
-    image: prom/prometheus
-    container_name: prometheus
-    restart: always
-    volumes:
-      - $PWD/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - $PWD/prometheus/rules.yml:/etc/prometheus/rules.yml
-    ports:
-      - "9090:9090"
-    networks:
-      - monitor
+  # prometheus:
+  #   image: prom/prometheus
+  #   container_name: prometheus
+  #   restart: always
+  #   volumes:
+  #     - $PWD/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+  #     - $PWD/prometheus/rules.yml:/etc/prometheus/rules.yml
+  #   ports:
+  #     - "9090:9090"
+  #   networks:
+  #     - monitor
 
   # 报警系统
-  alertmanager:
-    image: prom/alertmanager
-    container_name: alertmanager
-    restart: always
-    volumes:
-      - $PWD/prometheus/alertmanager.yml:/etc/alertmanager/alertmanager.yml
-    ports:
-      - "9093:9093"
-    networks:
-      - monitor
+  # alertmanager:
+  #   image: prom/alertmanager
+  #   container_name: alertmanager
+  #   restart: always
+  #   volumes:
+  #     - $PWD/prometheus/alertmanager.yml:/etc/alertmanager/alertmanager.yml
+  #   ports:
+  #     - "9093:9093"
+  #   networks:
+  #     - monitor
 
   # web可视化数据
   grafana:
     image: grafana/grafana
     container_name: grafana
     restart: always
+    volumes:
+      - $PWD/grafana/grafana.ini:/etc/grafana/grafana.ini
     ports:
       - "3000:3000"
     networks:
       - monitor
-
   # # 采集主机数据
-  node-exporter:
-    image: quay.io/prometheus/node-exporter
-    container_name: node-exporter
-    restart: always
-    ports:
-      - "9100:9100"
-    networks:
-      - monitor
-
-  # 本地ES服务
-  elasticsearch:
-    image: elasticsearch
-    container_name: elasticsearch
-    restart: always
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    environment:
-      - discovery.type=single-node
-  # 容器监控
-  cadvisor:
-    image: google/cadvisor:latest
-    container_name: cadvisor
-    restart: always
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:rw
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-    ports:
-      - "8080:8080"
-    networks:
-      - monitor
+  # node-exporter:
+  #   image: quay.io/prometheus/node-exporter
+  #   container_name: node-exporter
+  #   restart: always
+  #   ports:
+  #     - "9100:9100"
+  #   networks:
+  #     - monitor
+  # # 本地ES服务
+  # elasticsearch:
+  #   image: elasticsearch
+  #   container_name: elasticsearch
+  #   restart: always
+  #   ports:
+  #     - "9200:9200"
+  #     - "9300:9300"
+  #   environment:
+  #     - discovery.type=single-node
+  # # 容器监控
+  # cadvisor:
+  #   image: google/cadvisor:latest
+  #   container_name: cadvisor
+  #   restart: always
+  #   volumes:
+  #     - /:/rootfs:ro
+  #     - /var/run:/var/run:rw
+  #     - /sys:/sys:ro
+  #     - /var/lib/docker/:/var/lib/docker:ro
+  #   ports:
+  #     - "8080:8080"
+  #   networks:
+  #     - monitor
