--- a/prometheus/alertmanager.yml
+++ b/prometheus/alertmanager.yml
@@ -2,7 +2,7 @@ global:
   smtp_smarthost: smtp.163.com:25
   smtp_from: murrayee@163.com
   smtp_auth_username: murrayee@163.com
-  smtp_auth_password: "*******"
+  smtp_auth_password: "********"
   smtp_require_tls: false
 
 route:
