--- a/prometheus/rules.yml
+++ b/prometheus/rules.yml
@@ -3,9 +3,9 @@ groups:
     rules:
       - alert: InstanceDown
         expr: up == 0
-        for: 1m
+        for: 5s
         labels:
           user: test
         annotations:
           summary: "Instance {{ $labels.instance }} down"
-          description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minutes."
+          description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 5s."
